syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.common";

package com.glance.spaces.common;

// NOTE: Follow Naming convention mentioned in README.md

enum ZappId {
  UNSPECIFIED = 0;
  NEWS_BREAKING = 1;
  NEWS_WEATHER = 2;
  NEWS_ROUNDUP = 3;
  NEWS_HEADLINES = 4;
  SPORTS_ROUNDUP = 5;
  SPORTS_LEAGUE = 6 [deprecated = true];
  SPORTS_MATCH = 7 [deprecated = true]; //Added one to one zapp widget Ids to L0 zapp widget Id
  SPORTS_HEADLINES = 8;
  GAMING_FEATURED_GAME = 9;
  GAMES_RECENTLY_PLAYED = 10;
  SPORTS_NBA_HEADLINES = 11;
  SPORTS_NFL_HEADLINES = 12;
  SPORTS_NHL_HEADLINES = 13;
  SPORTS_MLB_HEADLINES = 14;
  SPORTS_NBA_LEAGUE_MATCH = 15;
  SPORTS_NFL_LEAGUE_MATCH = 16;
  SPORTS_NHL_LEAGUE_MATCH = 17;
  SPORTS_MLB_LEAGUE_MATCH = 18;
  SPORTS_NBA_TEAM_MATCH = 19;
  SPORTS_NFL_TEAM_MATCH = 20;
  SPORTS_NHL_TEAM_MATCH = 21;
  SPORTS_MLB_TEAM_MATCH = 22;
  SPORTS_NBA_ROUNDUP = 23;
  SPORTS_NFL_ROUNDUP = 24;
  SPORTS_NHL_ROUNDUP = 25;
  SPORTS_MLB_ROUNDUP = 26;
  SPORTS_NBA_OFF_SEASON = 27;
  SPORTS_NFL_OFF_SEASON = 28;
  SPORTS_NHL_OFF_SEASON = 29;
  SPORTS_MLB_OFF_SEASON = 30;
  TRENDZ_ROUNDUP = 31;
  TRENDZ_TOP_STORY_CATEGORIZED = 32;
  TOP_INSTANT_GAMING_GAME = 33;
  GAMES_EDITORS_CHOICE = 34;
  GAMES_COMMUNITY = 35;
  GAMES_NEW_ARRIVALS = 36;
  GAMES_LIVE = 37;
  GAMES_TOP_THREE = 38;
  SHOP_DAILY_DEAL = 39;
  SHOP_HEADLINES = 40; // Corresponds to HEADLINES_XXL and Ls BUDGET_BUYS_LN & BUDGET_BUYS_MD
  ENTERTAINMENT_BUZZ = 41;
  ENTERTAINMENT_ARTICLES = 42;
  SHOP_TRENDING_TODAY = 43;
  GAMES_INSTANT_GAME = 44;
  TRENDZ_INFINITY_SCROLL = 51;
  SPORTS_INFINITY_SCROLL = 52;
  GLANCE_GLOBAL_PREFERENCE = 53;
  SPORTS_OFF_SEASON = 54;
  SPORTS_LEAGUE_MATCH = 55;
  SPORTS_TEAM_MATCH = 56;
  HOME_HOROSCOPE = 57;
  SPORTS_STANDINGS = 58;
}
// naming convention for zapp id : [EU]_[ZAPP]